fix hire me features to align at start

--- a/assets/scss/pages/_frontpage.scss
+++ b/assets/scss/pages/_frontpage.scss
@@ -240,6 +240,7 @@
 	display: grid;
 	flex-direction: row;
 	grid-template-columns: repeat(2, 1fr);
+	align-items: start;
 
 	h2, .card, .btn {
 		grid-column: span 2;
